--- a/src/pages/_index/EducationDetails.astro
+++ b/src/pages/_index/EducationDetails.astro
@@ -7,6 +7,7 @@ interface Props extends IEducation {}
 const { university, universityHomepage, degree, major, GPA, startYear, endYear } = Astro.props
 ---
 
+<!-- Education Details -->
 <div class:list={["grid", "gap-1", "sm:grid-cols-8", "sm:gap-8"]}>
   <!-- Attended Years -->
   <YearRange
