--- a/src/pages/_index/Profile.astro
+++ b/src/pages/_index/Profile.astro
@@ -5,11 +5,13 @@ import ToggleColorScheme from "~components/ToggleColorScheme.astro"
 import ImageViewer from "~components/ImageViewer.astro"
 ---
 
+<!-- Profile -->
 <section>
   <div id="profile__toggle-color-scheme-wrapper" class:list={["fixed", "top-5", "md:top-8", "z-21"]}>
     <ToggleColorScheme class:list={["text-xl"]} />
   </div>
 
+  <!-- App Header -->
   <header
     id="app-header"
     class:list={[
