--- a/src/pages/_index/ProjectDetails.astro
+++ b/src/pages/_index/ProjectDetails.astro
@@ -37,6 +37,7 @@ if (!!repository) {
 const selectedHighlights: IProjectHighlight[] = highlights.filter((it) => it.value > 0)
 ---
 
+<!-- Project Details -->
 <div class:list={["grid", "gap-1", "sm:grid-cols-8", "sm:gap-8"]}>
   <!-- Ongoing Years -->
   <YearRange
