--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -3,6 +3,7 @@ import AppLink from "./AppLink.astro"
 import ImageViewer from "./ImageViewer.astro"
 ---
 
+<!-- App Footer -->
 <footer class:list={["text-center", "text-xs", "leading-relaxed", "px-6", "pt-24", "pb-12", "md:px-12", "md:pt-48"]}>
   <!-- Donations -->
   <div class:list={["flex", "items-center", "justify-center", "gap-8"]}>
