add missing next button title

--- a/src/components/ImageViewer.astro
+++ b/src/components/ImageViewer.astro
@@ -82,6 +82,7 @@ const buttonNextId: string = nanoid(8)
                   "p-4",
                   "focus-visible:outline-0",
                 ]}
+                title="Next"
               >
                 <i class="i-ri:arrow-right-line" />
               </button>
