--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions"
 import IconifyIconDisplayFix from "~components/IconifyIconDisplayFix.astro"
 import AppFooter from "~components/AppFooter.astro"
 
@@ -18,6 +19,7 @@ const description: string = "An open-sourced minimal resume site template built 
   <link rel="icon" type="image/png" sizes="16x16" href=`${import.meta.env.BASE_URL}/favicon-16x16.png` />
   <link rel="manifest" href=`${import.meta.env.BASE_URL}/site.webmanifest` />
   <link rel="stylesheet" href=`${import.meta.env.BASE_URL}/fonts/Inter/inter.css` />
+  <ViewTransitions />
 
   <body
     class:list={[
