--- a/src/components/en/AppFooter.astro
+++ b/src/components/en/AppFooter.astro
@@ -1,6 +1,6 @@
 ---
-import AppLink from "./AppLink.astro"
-import ImageViewer from "./ImageViewer.astro"
+import AppLink from "~components/AppLink.astro"
+import LocaleImageViewer from "~components/LocaleImageViewer.astro"
 ---
 
 <!-- App Footer -->
@@ -9,7 +9,7 @@ import ImageViewer from "./ImageViewer.astro"
   <div class:list={["flex", "items-center", "justify-center", "gap-8"]}>
     <!-- Wechat -->
     <div class:list={["flex-1", "max-w-25", "lg:max-w-35"]}>
-      <ImageViewer
+      <LocaleImageViewer
         assets={[{ src: "/src/assets/images/wechat-donation-qr.webp", alt: "Scan QR code to donate on Wechat." }]}
         showIndex={false}
       />
@@ -18,7 +18,7 @@ import ImageViewer from "./ImageViewer.astro"
 
     <!-- Buy me a coffee -->
     <div class:list={["flex-1", "max-w-25", "lg:max-w-35"]}>
-      <ImageViewer
+      <LocaleImageViewer
         assets={[
           { src: "/src/assets/images/buy-me-a-coffee-donation-qr.webp", alt: "Scan QR code to buy me a coffee." },
         ]}
@@ -45,7 +45,7 @@ import ImageViewer from "./ImageViewer.astro"
         >
           jianqiang du
         </AppLink>
-        .
+        <span>.</span>
       </span>
     </div>
 
@@ -60,7 +60,7 @@ import ImageViewer from "./ImageViewer.astro"
         >
           The MIT License
         </AppLink>
-        .
+        <span>.</span>
       </span>
     </div>
 
@@ -75,7 +75,7 @@ import ImageViewer from "./ImageViewer.astro"
         >
           brittany chiang
         </AppLink>
-        .
+        <span>.</span>
       </span>
     </div>
 
@@ -88,9 +88,9 @@ import ImageViewer from "./ImageViewer.astro"
           url="https://astro.build"
           showSuffixIcon
         >
-          Astro
+          {Astro.generator}
         </AppLink>
-        .
+        <span>.</span>
       </span>
     </div>
   </p>
