--- a/src/pages/en/_index/WorkDetails.astro
+++ b/src/pages/en/_index/WorkDetails.astro
@@ -1,6 +1,6 @@
 ---
 import type { IWork } from "~types/work"
-import YearRange from "~components/YearRange.astro"
+import LocaleYearRange from "~components/LocaleYearRange.astro"
 import AppLink from "~components/AppLink.astro"
 import Tag from "~components/Tag.astro"
 
@@ -11,7 +11,7 @@ const { jobTitle, company, companyHomepage, description, projects, technologiesU
 <!-- Work Details -->
 <div class:list={["grid", "gap-1", "sm:grid-cols-8", "sm:gap-8"]}>
   <!-- Employed Years -->
-  <YearRange
+  <LocaleYearRange
     class:list={["text-xs", "tracking-wide", "uppercase", "sm:leading-loose", "sm:col-span-2"]}
     startYear={startYear}
     endYear={endYear}
