--- a/src/components/LocaleImageViewer.astro
+++ b/src/components/LocaleImageViewer.astro
@@ -4,7 +4,7 @@ import type { ImageMetadata } from "astro"
 import type { IProjectAsset } from "~types/project"
 import { nanoid } from "nanoid"
 import DefaultImage from "~assets/images/default.webp"
-import type { TLocale } from "~types/i18n"
+import { type TLocale, defaultLocale } from "~/i18n"
 
 interface Props {
   assets: IProjectAsset[]
@@ -13,7 +13,7 @@ interface Props {
   class?: string | undefined
   children?: unknown | undefined
 }
-const { assets, showIndex = true, locale = "en", class: className } = Astro.props
+const { assets, showIndex = true, locale = defaultLocale, class: className } = Astro.props
 
 type ImageMetadataModule = { default: ImageMetadata }
 
@@ -26,8 +26,17 @@ const dialogId: string = nanoid(8)
 const buttonPrevId: string = nanoid(8)
 const buttonNextId: string = nanoid(8)
 
-const buttonPrevTitle: string = locale === "zh" ? "上一页" : "Previous"
-const buttonNextTitle: string = locale === "zh" ? "下一页" : "Next"
+let buttonPrevTitle: string = ""
+let buttonNextTitle: string = ""
+if (locale === "en") {
+  buttonPrevTitle = "Previous"
+  buttonNextTitle = "Next"
+} else if (locale === "zh") {
+  buttonPrevTitle = "上一页"
+  buttonNextTitle = "下一页"
+} else {
+  // do nothing
+}
 ---
 
 {
