redirect to i18n page on index route

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,19 @@
 ---
-import BaseLayout from "~layouts/BaseLayout.astro"
-import Profile from "./_index/Profile.astro"
-import Education from "./_index/Education.astro"
-import Work from "./_index/Work.astro"
-import Project from "./_index/Project.astro"
+import HeadIcons from "~components/HeadIcons.astro"
+import HeadMetaEn from "~components/en/HeadMeta.astro"
+
+const redirectMessage: string = "redirecting..."
 ---
 
-<BaseLayout>
-  <main>
-    <Profile />
-    <Education class="mt-24" />
-    <Work class="mt-24" />
-    <Project class="mt-24" />
-  </main>
-</BaseLayout>
+<html lang="en">
+  <title>{redirectMessage}</title>
+  <HeadMetaEn />
+  <HeadIcons />
+  <body>{redirectMessage}</body>
+</html>
 
-<style>
-  html {
-    --at-apply: scroll-pt-19 "md:scroll-pt-29";
-  }
-</style>
+<script>
+  import { getLocale, setLocale } from "~/i18n"
+
+  setLocale(getLocale())
+</script>
