--- a/src/components/LocaleToggleColorScheme.astro
+++ b/src/components/LocaleToggleColorScheme.astro
@@ -5,15 +5,18 @@ interface Props {
 const { class: className } = Astro.props
 ---
 
-<toggle-color-scheme class:list={["flex", "items-center", "justify-center", "cursor-pointer", className]} type="button">
+<locale-toggle-color-scheme
+  class:list={["flex", "items-center", "justify-center", "cursor-pointer", className]}
+  type="button"
+>
   <i></i>
-</toggle-color-scheme>
+</locale-toggle-color-scheme>
 
 <script>
   import type { TColorScheme } from "~types/color-scheme"
   import { type TLocale, parseLocale } from "~/i18n"
 
-  class ToggleColorScheme extends HTMLElement {
+  class LocaleToggleColorScheme extends HTMLElement {
     private colorScheme: TColorScheme = "os"
     private localStorageKey: string = "colorScheme"
     private matchMediaListDark: MediaQueryList = window.matchMedia("(prefers-color-scheme: dark)")
@@ -199,5 +202,5 @@ const { class: className } = Astro.props
     }
   }
 
-  customElements.define("toggle-color-scheme", ToggleColorScheme)
+  customElements.define("locale-toggle-color-scheme", LocaleToggleColorScheme)
 </script>
