--- a/src/components/en/AppFooter.astro
+++ b/src/components/en/AppFooter.astro
@@ -33,9 +33,7 @@ import LocaleImageViewer from "~components/LocaleImageViewer.astro"
     <!-- Author -->
     <div>
       <span>
-        Made with
-        <span class="text-red-500">❤️</span>
-        by
+        Made with<span class="text-red-500"> ❤️ </span>by
       </span>
       <span class="inline-flex">
         <AppLink
