--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,14 +1,11 @@
 ---
-import { type TLocale, defaultLocale } from "~/i18n"
+import { type TLocale, parseLocale, defaultLocale } from "~/i18n"
 import LocaleBaseLayout from "~layouts/LocaleBaseLayout.astro"
 import AppLink from "~components/AppLink.astro"
 import LocaleToggleColorScheme from "~components/LocaleToggleColorScheme.astro"
 import { getRelativeLocaleUrl } from "astro:i18n"
 
-interface Props {
-  locale?: TLocale | undefined
-}
-const { locale = defaultLocale } = Astro.props
+const locale: TLocale = parseLocale(Astro.currentLocale ?? defaultLocale)
 ---
 
 <LocaleBaseLayout locale={locale}>
@@ -17,7 +14,7 @@ const { locale = defaultLocale } = Astro.props
     <nav class:list={["flex", "items-center", "justify-between", "mb-2", "md:mb-4"]}>
       <AppLink
         class:list={["leading-tight", "lowercase"]}
-        url={getRelativeLocaleUrl(Astro.currentLocale ?? defaultLocale)}
+        url={getRelativeLocaleUrl(locale)}
         showPrefixIcon
         prefixIconClassName="i-ri:arrow-left-line"
       >
