fix engine display

--- a/src/components/zh/AppFooter.astro
+++ b/src/components/zh/AppFooter.astro
@@ -80,7 +80,7 @@ import LocaleImageViewer from "~components/LocaleImageViewer.astro"
           url="https://astro.build"
           showSuffixIcon
         >
-          Astro
+          {Astro.generator}
         </AppLink>
         <span>框架构建</span>
       </span>
