--- a/src/pages/zh/project/index.astro
+++ b/src/pages/zh/project/index.astro
@@ -3,7 +3,7 @@ import LocaleBaseLayout from "~layouts/LocaleBaseLayout.astro"
 import AppLink from "~components/AppLink.astro"
 import LocaleToggleColorScheme from "~components/LocaleToggleColorScheme.astro"
 import type { IProject } from "~types/project"
-import { projects } from "~data/en/projects"
+import { projects } from "~data/zh/projects"
 import { mostRecentYearComparator } from "~utils/comparators"
 import LocaleYearRange from "~components/LocaleYearRange.astro"
 import Tag from "~components/Tag.astro"
@@ -18,11 +18,11 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
     <nav class:list={["flex", "items-center", "justify-between", "mb-2", "md:mb-4"]}>
       <AppLink
         class:list={["leading-tight", "lowercase"]}
-        url={getRelativeLocaleUrl("en")}
+        url={getRelativeLocaleUrl("zh")}
         showPrefixIcon
         prefixIconClassName="i-ri:arrow-left-line"
       >
-        Back
+        返回
       </AppLink>
 
       <LocaleToggleColorScheme class="text-xl" />
@@ -40,7 +40,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
         "dark:text-gray-300",
       ]}
     >
-      All Projects
+      全部项目
     </h1>
 
     <!-- Project Archives -->
@@ -61,7 +61,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
               "dark:bg-gray-900",
             ]}
           >
-            Year
+            年份
           </th>
 
           <!-- Project -->
@@ -78,7 +78,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
               "dark:bg-gray-900",
             ]}
           >
-            Project
+            项目名称
           </th>
 
           <!-- Made at -->
@@ -98,7 +98,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
               "lg:table-cell",
             ]}
           >
-            Made at
+            公司
           </th>
 
           <!-- Technologies Used -->
@@ -117,7 +117,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
               "lg:table-cell",
             ]}
           >
-            Technologies Used
+            相关技术
           </th>
 
           <!-- Link -->
@@ -136,7 +136,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
               "sm:table-cell",
             ]}
           >
-            Link
+            链接
           </th>
         </tr>
       </thead>
@@ -147,7 +147,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
             <tr class:list={["border-b", "last:border-none", "border-gray-800/10", "dark:border-gray-100/10"]}>
               {/* Year */}
               <td class:list={["w-1/12", "align-top", "text-sm", "leading-snug", "capitalize", "py-4", "pr-4"]}>
-                <LocaleYearRange locale="en" startYear={it.startYear} endYear={it.endYear} />
+                <LocaleYearRange locale="zh" startYear={it.startYear} endYear={it.endYear} />
               </td>
 
               {/* Project */}
