--- a/src/pages/zh/project/index.astro
+++ b/src/pages/zh/project/index.astro
@@ -1,6 +1,7 @@
 ---
 import LocaleBaseLayout from "~layouts/LocaleBaseLayout.astro"
 import AppLink from "~components/AppLink.astro"
+import LocaleToggleLocale from "~components/LocaleToggleLocale.astro"
 import LocaleToggleColorScheme from "~components/LocaleToggleColorScheme.astro"
 import type { IProject } from "~types/project"
 import { projects } from "~data/zh/projects"
@@ -15,9 +16,9 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
 <LocaleBaseLayout locale="zh">
   <div class:list={["py-5", "md:py-8"]}>
     <!-- Nav -->
-    <nav class:list={["flex", "items-center", "justify-between", "mb-2", "md:mb-4"]}>
+    <nav class:list={["flex", "justify-between", "leading-tight", "mb-2", "md:mb-4", "gap-4", "md:gap-5"]}>
       <AppLink
-        class:list={["leading-tight", "lowercase"]}
+        class:list={["lowercase"]}
         url={getRelativeLocaleUrl("zh")}
         showPrefixIcon
         prefixIconClassName="i-ri:arrow-left-line"
@@ -25,6 +26,7 @@ const projectList: IProject[] = projects.toSorted(mostRecentYearComparator)
         返回
       </AppLink>
 
+      <LocaleToggleLocale class:list={["ml-auto"]} />
       <LocaleToggleColorScheme class="text-xl" />
     </nav>
 
